--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             var mapOptions = {
     center: new google.maps.LatLng(28.620876, 77.092356),
     zoom: 15,
-    mapTypeId: google.maps.MapTypeId.SATELLITE
+    mapTypeId: google.maps.MapTypeId.ROADMAP
 };
 var map = new google.maps.Map(document.getElementById('map'), mapOptions);
 
