--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </nav>
 
         <!-- MAP -->
-        <script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=initialize"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVyf27iTd7nZ8fgoAUY_jS7nFUg7TYLWU"></script>
         <div id="map"></div>
         <script>
         var mapOptions = {
