--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
         <!-- BULMA -->
         <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css">-->
+        <!-- FONT AWESOME -->
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <!-- MATERIALIZE -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <!-- Local stylesheets and scripts -->
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <!-- NAVBAR -->
-         
         <nav>
 
-            <div class="nav-wrapper black">
+            <div class="nav-wrapper white">
 
-                <a href="#" class="brand-logo center"><img src="assets/img/logo-60.png" style="top: 4px;height: 50px; width: 50px;" class="responsive-img"></a>
+                <a href="#" class="brand-logo center black-text" id="logo">
+                <img src="assets/img/marker.png" style="top: 4px;height: 50px; width: 50px;" class="responsive-img">
+                <bold>artOasis</bold>
+                </a>
 
                 
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
 
-                   <li class="grey darken-3"><a href="#">Home</a></li>
+                   <li><a class="black-text" href="#">Home</a></li>
 
-                    <li ><a href="#">Placeholder</a></li>
+                    <li ><a class="black-text" href="#">Placeholder</a></li>
 
                 </ul>
 
@@ -48,21 +54,71 @@
         </nav>
 
         <!-- MAP -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVyf27iTd7nZ8fgoAUY_jS7nFUg7TYLWU"></script>
         <div id="map"></div>
-        <script>
-        var mapOptions = {
-    center: new google.maps.LatLng(28.620876, 77.092356),
-    zoom: 12,
-    mapTypeId: google.maps.MapTypeId.ROADMAP
-};
-var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+    <script>
+      // Note: This example requires that you consent to location sharing when
+      // prompted by your browser. If you see the error "The Geolocation service
+      // failed.", it means you probably did not give permission for the browser to
+      // locate you.
+      var map, infoWindow;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 6,
+          mapTypeId: 'roadmap'
+        });
+       // infoWindow = new google.maps.InfoWindow;
 
-var markerOptions = {
-    position: new google.maps.LatLng(28.620876, 77.092356)
-};
-var marker = new google.maps.Marker(markerOptions);
-marker.setMap(map);
-        </script>
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            //infoWindow.setPosition(pos);
+            //infoWindow.setContent('You are Here');
+            //infoWindow.open(map);
+            map.setCenter(pos);
+            var marker = new google.maps.Marker({
+                position: pos,
+                icon: 'assets/img/marker.png',
+                map: map
+            });
+            marker.setMap(map);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
+
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVyf27iTd7nZ8fgoAUY_jS7nFUg7TYLWU&callback=initMap">
+    </script>
+        <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVyf27iTd7nZ8fgoAUY_jS7nFUg7TYLWU&callback=initMap">
+        </script>-->
+        <div  class="" id="mediaMenu">
+            <a class="btn-floating btn-large waves-effect waves-white orange accent-4 z-depth-2" id="scloud">
+            <i class="fa fa-soundcloud white-text"></i></a>
+            <a class="btn-floating btn-large waves-effect waves-white z-depth-2" id="insta">
+            <i class="fa fa-instagram"></i></a>
+            <a class="btn-floating btn-large waves-effect waves-white red accent-4 z-depth-2" id="yt">
+            <i class="fa fa-youtube-play white-text"></i></a>
+            <a class="btn-floating btn-large waves-effect waves-white green accent-4 z-depth-2" id="dart">
+            <i class="fa fa-deviantart white-text"></i></a>
+        </div>
     </body>
 </html>
