--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="nav-wrapper white">
 
                 <a href="#" class="brand-logo center black-text" id="logo">
-                <img src="assets/img/marker.png" style="top: 4px;height: 50px; width: 50px;" class="responsive-img">
+                <!--<img src="assets/img/marker.png" style="top: 4px;height: 50px; width: 50px;" class="responsive-img">-->
                 <bold>artOasis</bold>
                 </a>
 
