--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <!-- jQuery -->
+        <!--<script  src="https://code.jquery.com/jquery-3.2.1.js"  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="  crossorigin="anonymous"></script>-->
         <!-- Local stylesheets and scripts -->
         <link href="style.css" rel="stylesheet">
     </head>
@@ -42,7 +44,7 @@
 
                 <div class="input-field right">
 
-                    <input id="search" type="search" placeholder="Location.." required>
+                    <input id="search" type="search" placeholder="Search.." required>
 
                     <label class="label-icon" for="search"><i id="sicon" class="material-icons">search</i></label>
 
@@ -55,61 +57,19 @@
 
         <!-- MAP -->
         <div id="map"></div>
-    <script>
-      // Note: This example requires that you consent to location sharing when
-      // prompted by your browser. If you see the error "The Geolocation service
-      // failed.", it means you probably did not give permission for the browser to
-      // locate you.
-      var map, infoWindow;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 6,
-          mapTypeId: 'roadmap'
-        });
-       // infoWindow = new google.maps.InfoWindow;
-
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-
-            //infoWindow.setPosition(pos);
-            //infoWindow.setContent('You are Here');
-            //infoWindow.open(map);
-            map.setCenter(pos);
-            var marker = new google.maps.Marker({
-                position: pos,
-                icon: 'assets/img/marker.png',
-                map: map
-            });
-            marker.setMap(map);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      }
-
-
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
-    </script>
+    <script src="script.js" type="text/javascript"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVyf27iTd7nZ8fgoAUY_jS7nFUg7TYLWU&callback=initMap">
     </script>
         <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVyf27iTd7nZ8fgoAUY_jS7nFUg7TYLWU&callback=initMap">
         </script>-->
+        <div class="black-text" id="cords"></div>
+        <div id="getLocation">
+            <div id="locationButton" class="btn-floating btn-large waves-effect waves-white white z-depth-2" onclick="initMap();">
+                <i class="material-icons black-text">my_location</i>
+            </div>
+        </div>
+              
         <div  class="" id="mediaMenu">
             <a class="btn-floating btn-large waves-effect waves-white orange accent-4 z-depth-2" id="scloud">
             <i class="fa fa-soundcloud white-text"></i></a>
