--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
         <div  class="" id="mediaMenu">
             <div id="locationButton" class="btn-floating btn-large waves-effect waves-white white z-depth-2" onclick="initMap();">
                 <i class="material-icons black-text">my_location</i>
+                <a class="btn-floating btn-large waves-effect waves-white orange accent-4 z-depth-2" id="scloud">
+                <i class="fa fa-soundcloud white-text"></i>
+                </a>
             </div>
-            <a class="btn-floating btn-large waves-effect waves-white orange accent-4 z-depth-2" id="scloud">
-                <i class="fa fa-soundcloud white-text"></i></a>
         </div>
     </body>
 </html>
